[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ate-neva-obst"
version = "2.0.7"
description = "Unofficial Python SDK for Neva Object Storage (S3-compatible)."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "BSD-3-Clause"}
authors = [
    { name = "Azzam Technology Ecosystem", email = "azztecheco@gmail.com" }
]

keywords = [
    "s3",
    "object-storage",
    "nevaobjects",
    "domainesia",
    "sdk",
    "upload",
    "storage"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "boto3>=1.40",
    "binaryornot>=0.4.4",
    "click>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "moto[s3]>=4.0",
    "ruff",
]

[project.scripts]
nevaobst = "neva_obst.cli:main"

[project.urls]
Repository = "https://github.com/azztche/ate-neva-obst/"

[tool.hatch.build.targets.wheel]
packages = ["src/neva_obst"]

[tool.hatch.build]
include = [
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.sdist]
include = [
    "src/",
    "LICENSE",
    "README.md",
]

[tool.ruff]
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]